chore: configure imports to use as package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /** My components from stories */
+    "paths": {
+      "@starkit/*": ["./src/stories/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
