--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.18",
     "iconsax-react": "^0.0.8",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
