--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.375",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.18",
     "iconsax-react": "^0.0.8",
