--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.12.18",
     "iconsax-react": "^0.0.8",
     "locomotive-scroll": "^4.1.4",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "source-map-explorer": "^2.5.3"
