--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "preview": "vite preview",
     "analyze": "source-map-explorer 'dist/assets/*.js'",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "build-storybook-docs": "storybook build -o dist/docs",
-    "build-all": "npm run build && npm run build-storybook-docs"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
