chore: upgrade Storybook to 10 and update imports

--- a/package.json
+++ b/package.json
@@ -25,14 +25,10 @@
     "source-map-explorer": "^2.5.3"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/addon-themes": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-docs": "^10.2.7",
+    "@storybook/addon-links": "^10.2.7",
+    "@storybook/addon-themes": "^10.2.7",
+    "@storybook/react-vite": "^10.2.7",
     "@types/aria-query": "^5.0.1",
     "@types/locomotive-scroll": "^4.1.0",
     "@types/react": "^18.0.28",
@@ -44,13 +40,13 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "eslint-plugin-storybook": "^0.11.0",
+    "eslint-plugin-storybook": "^10.2.7",
     "postcss": "^8.5.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prop-types": "^15.8.1",
     "sass": "^1.83.0",
-    "storybook": "^8.6.14",
+    "storybook": "^10.2.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vite": "^6.1.0"
